<resources>
    <string name="app_name">Pay My Bill</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Name -->
    <string name="add_bill_activity">Add Bill</string>
    <string name="add_history_activity">History</string>
    <string name="profile_activity">My Profile</string>
    <string name="expenses_activity">My Expenses</string>
    <string name="settle_activity">Settle Up</string>

    <!-- All Hints -->
    <string name="hint_bill_description">Bill Description</string>
    <string name="hint_bill_date">Paid On</string>
    <string name="hint_bill_amount">Amount</string>

    <!-- Button Names -->
    <string name="btn_share_with">Share With</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Login Names -->
    <string name="btn_sign_in">SIGN IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_facebook">LOG IN WITH FACEBOOK</string>
    <string name="login_title">Login</string>
    <string name="tv_forgot_password"><u>Forgot your password ?</u></string>
    <string name="login_or">-------- OR ---------</string>
    <string name="OtpMessage">You will receive OTP on your email address,
        Please enter OTP below to verify your email address</string>

    <!--Profile activity -->
    <string name="txt_profile_name">Name</string>
    <string name="txt_profile_email_id">Email id</string>
    <string name="txt_profile_mob_no">Mobile Number</string>
    <string name="txt_profile_country">Country</string>

    <!--User Registration -->
    <string name="register_title">User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email id</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Re-Enter Your Password</string>
    <string name="register_cancel_btn">CANCEL</string>
    <string name="register_btn">REGISTER</string>
    <string name="upload_photo_register">"Upload your photo"</string>

    <!--Sign in -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_btn_title">SIGN IN</string>

    <!-- Fab Layout-->
    <string name="string_expenses">Add Expenses</string>

    <!--settle up-->
    <string name="btn_settle_up">Settle Up</string>
    <string name="my_profile">My Profile</string>
    <string name="forgotpass_btn">Send Password</string>
    <string name="forgotpass_title">Forgot Password</string>
    <string name="my_profile_update">Update</string>
    <string name="edit_my_profile">Edit Profile</string>
    <string name="forgot_password_title">Your password will be sent
        on following email address, Please validate your email address</string>>

    <!--Facebook App Key -->
    <string name="facebook_app_id">1134020779954080</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="str_unequally">Unequally</string>
    <string name="str_equally">Equally</string>
    <string name="btn_next">Next</string>
    <string name="btn_paidBy">You</string>
    <string name="str_paid_by">Paid By</string>
    <string name="str_divided">Divided</string>
    <string name="str_err_enter_amt">Please Enter Amount</string>
    <string name="str_err_enter_date">Please Enter Bill Date</string>
    <string name="str_error_select_at_least_one">Please select at least one friend</string>
    <!--Add Friend -->
    <string name="friend_name">Friend name</string>
    <string name="friend_phone">Enter phone No</string>
    <string name="friend_email">Enter email id</string>
    <string name="friend_save">SUBMIT</string>
    <string name="friend_add">Add friend</string>
    <string name="name_validation_msg">Please enter name</string>
    <string name="phone_validation_msg">Please enter phone</string>
    <string name="phone_no_validation_msg">Phone number must have 10 digits</string>
    <string name="email_validation_msg">Please enter email id</string>
    <string name="invalid_email_id">Invalid email id</string>
    <string name="ph_already_present">Record already present cannot insert reord</string>

    <string name="btn_ok">Ok</string>
    <string name="str_dialog_title_select_paid_by">Select Paid By</string>
    <string name="str_number_error">Please enter correct amount</string>
    <string name="str_error_correct_amount">Please enter correct amount</string>
    <string name="str_err_amount">Please fill the correct amounts</string>
    <string name="str_err_bill_not_settel">Bill is not settle correctly please fill correct amounts</string>
    <string name="add_expences">Expense is added</string>
    <string name="str_err_expanses_add">Expense is not added retry!!!</string>
    <string name="hint_no_transcaion">No transaction yet</string>
    <string name="str_country_message">You can not change the currency once you selected</string>
    <string name="select_country">Select your country</string>
    <string name="str_divide_payment">Divide payment equally</string>
    <string name="str_settel_sure">Are you sure you want to settle this amount?</string>
    <string name="title_activity_carousel">CarouselActivity</string>

    <!--Carousel -->

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="str_divide_bill">Divide bill equally</string>
    <string name="first_logo">Logo</string>
    <string name="str_select_currency">Select your currency</string>
    <string name="str_my_friennd">My Friends</string>
</resources>
