<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <com.vibeosys.paymybill.views.RoundedImageView
        android:id="@+id/profImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/avatar_profile" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/billDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_bill_date"
            android:textColor="@color/secondaryText"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/billAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:gravity="end"
        android:text="@string/hint_bill_amount"
        android:textColor="@color/primaryText"
        android:textSize="22sp" />
</LinearLayout>