<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.vibeosys.paymybill.activities.AddBillActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBill"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:padding="0dp"
                android:src="@drawable/ic_receipt_black_48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCurrencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="Rs."
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_bill_amount"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>


                <EditText
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_bill_date"
                    android:singleLine="true" />


            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/txtBillDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_bill_description"
            android:inputType="text"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <!--<Button
                android:id="@+id/btnShareWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/button_custom"
                android:text="@string/btn_share_with"
                android:textColor="@android:color/white"
                android:translationZ="4dp" />-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/str_divided"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioDivided"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioEqually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_equally" />

                <RadioButton
                    android:id="@+id/radioUnequally"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_unequally" />

            </RadioGroup>
        </LinearLayout>

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtErrorFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/str_error_select_at_least_one"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_custom_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:translationZ="4dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_custom"
            android:text="@string/btn_next"
            android:textColor="@android:color/white"
            android:translationZ="4dp" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/str_paid_by"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPaidBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_custom"
            android:text="@string/btn_paidBy"
            android:textColor="@android:color/white"
            android:translationZ="4dp" />
    </LinearLayout>
</LinearLayout>
