<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.vibeosys.paymybill.activities.TransactionDetailsActivity">

    <TextView
        android:id="@+id/txtErrorAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/str_error_correct_amount"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="Total"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtRemains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="Remains"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:visibility="visible" />

    <ListView
        android:id="@+id/transactionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_custom_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:translationZ="4dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_custom"
            android:text="@string/btn_save"
            android:textColor="@android:color/white"
            android:translationZ="4dp" />
    </LinearLayout>
</LinearLayout>
