<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/login_with_Facebook"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/facebook_login_img" />

                <TextView
                    android:id="@+id/textOR"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_with_Facebook"
                    android:layout_margin="8dp"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_or"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/google_Plus_signIn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/textOR"
                    android:background="@drawable/google_login_image" />

                <TextView
                    android:id="@+id/textOR2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/google_Plus_signIn"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_or"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"></LinearLayout>
            <!-- Email Label -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_emailIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <EditText
                    android:id="@+id/emailIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <!-- Password Label -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/sign_in_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_custom"
                    android:text="@string/sign_btn_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_custome_till"
                    android:text="@string/register_btn"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="22dp"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/tv_forgot_password"
                android:textColor="#3232FF"
                android:textSize="15sp"
                android:textStyle="italic" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>




